fixed mobile caption alignment

--- a/assets/css/carousel-test.css
+++ b/assets/css/carousel-test.css
@@ -89,7 +89,7 @@ body { font-family: sans-serif; }
 .caption {
   margin: 0;
   padding-top: 0px;
-  padding-left: 15%;
+  padding-left: 25%;
   text-align: left;
   z-index: 5;
   color: white;
@@ -99,7 +99,7 @@ body { font-family: sans-serif; }
 
 .description {
   margin: 0;
-  padding-left: 15%;
+  padding-left: 25%;
   text-align: left;
   z-index: 5;
   color: white;
