--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -88,7 +88,7 @@ body { font-family: sans-serif; }
 .caption {
   margin: 0;
   padding-top: 0px;
-  padding-left: 15%;
+  padding-left: 25%;
   text-align: left;
   z-index: 5;
   color: white;
@@ -98,7 +98,7 @@ body { font-family: sans-serif; }
 
 .description {
   margin: 0;
-  padding-left: 15%;
+  padding-left: 25%;
   text-align: left;
   z-index: 5;
   color: white;
